force-app/main/default/objects/Batch_Configuration__mdt/Batch_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type to manage batch class configurations including batch size, scheduling, and execution parameters. Can be used by any batch class in the org for centralized configuration management.</description>
    <label>Batch Configuration</label>
    <pluralLabel>Batch Configurations</pluralLabel>
</CustomObject>