force-app/main/default/objects/Batch_Configuration__mdt/fields/Batch_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class_Name__c</fullName>
    <description>The API name of the batch class (e.g., TerritoryAliasSyncBatch)</description>
    <inlineHelpText>Enter the exact API name of the batch class. This field is used to identify which batch class this configuration applies to.</inlineHelpText>
    <label>Batch Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>