force-app/main/default/objects/Batch_Configuration__mdt/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>The number of records to process in each batch execution. Valid range: 1-2000 (Salesforce maximum).</description>
    <inlineHelpText>Specify the batch size (number of records per batch). Recommended: 200-500. Maximum: 2000. Lower values reduce governor limit risk, higher values improve performance.</inlineHelpText>
    <label>Batch Size</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>