force-app/main/default/objects/Batch_Configuration__mdt/fields/Default_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Batch_Size__c</fullName>
    <description>Fallback batch size if the primary Batch_Size__c is not suitable for certain scenarios.</description>
    <inlineHelpText>Optional fallback batch size. Use this for alternative scenarios (e.g., large data loads vs. regular processing).</inlineHelpText>
    <label>Default Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>