force-app/main/default/objects/Batch_Configuration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what this batch class does and any special configuration notes.</description>
    <inlineHelpText>Document the purpose of this batch, when it runs, and any important configuration details.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>