force-app/main/default/objects/Batch_Configuration__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Used when multiple batches need to run in a specific sequence. Lower numbers execute first.</description>
    <inlineHelpText>Optional. Specify execution order when chaining multiple batches (1, 2, 3, etc.). Leave blank if order doesn&apos;t matter.</inlineHelpText>
    <label>Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>