force-app/main/default/objects/Batch_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this batch configuration is active and should be used by the batch class.</description>
    <inlineHelpText>Uncheck to disable this configuration without deleting it. Batch classes will use default values if no active configuration is found.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>