force-app/main/default/objects/Batch_Configuration__mdt/fields/Processing_Window__c.field-meta.xml
<CustomField>
    <fullName>Processing_Window__c</fullName>
    <description>Processing window for the records in minutes</description>
    <label>Processing Window</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>