force-app/main/default/objects/Batch_Configuration__mdt/fields/Wait_Time_After_Creation__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_After_Creation__c</fullName>
    <description>Wait time after creation of the record in minutes</description>
    <label>Wait Time After Creation</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>